--- a/grid.css
+++ b/grid.css
@@ -17,7 +17,7 @@ body {
   grid-gap: 20px;
 }
 
-/* .cm-item {
+.cm-item {
   background-color: var(--white);
   /*color: black;*/
   text-align: center;
@@ -26,7 +26,7 @@ body {
   border-radius: 2px;
   box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.1);
 
-} */
+}
 
 .cm-item:hover {
   
