--- a/grid.css
+++ b/grid.css
@@ -35,9 +35,9 @@ body {
 }
 
 
-/*@media (max-width: 768px) {
+@media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
     padding: 0 40px;
   }
-}*/
+}
